--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -88,7 +88,7 @@ body {
   .burger-menu {
     display: block;
     position: absolute;
-    right: 20px;
+    left: 200px;
     top: 50%;
     transform: translateY(-50%);
     z-index: 1002;
